apps/media/jellyfin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-dashboard-https
  namespace: homeassistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jelly.powell.place`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8123
      middlewares:
        - name: security
          namespace: kube-system
